# CONFETTI

./: README.md  main.py
.github/workflows/: main.yml
Confetti/: package.json  pnpm-lock.yaml
Confetti/src-tauri/: Cargo.toml  tauri.conf.json
Confetti/src-tauri/src/: main.rs
Confetti/src/lib/: Confetti.svelte
Confetti/src/routes/: +page.svelte
