[package]
name = "confetti"
version = "0.1.0"
description = "Makes applications objectively more exciting"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-all", "global-shortcut-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raw-window-handle = "0.5"
# Windows native calls
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.39.0", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi"
] }
# macOS native calls
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
